infra/modules/app/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = "devops-challenge-vpc"
    Environment = var.environment
  }
}
